<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal" >
    
    <TextView
        android:id="@+id/item_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
      	android:gravity="center"
        android:layout_weight="1"
        android:layout_margin="15dp"
        android:text="@string/item_text1"
        android:textColor="#00B5FC" 
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/item_birth"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:gravity="center"
        android:layout_weight="1"
        android:text="@string/item_text2"
        android:textColor="#00B5FC" 
        android:textSize="20sp"/>

    <Button
        android:id="@+id/item_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="#00B5FC"
        android:text="@string/item_button" 
        android:textSize="20sp"
        android:focusable="false"
        android:layout_marginRight="10dp"
        android:layout_margin="10dp"
        android:gravity="center"/>
    

</LinearLayout>
